# ColorConsistency

./: README.md
Data/Cache/: ParamsPro.txt
Data/Images/: Thumbs.db
Source/: CMakeLists.txt
Source/QuadProg/: Array.cpp  Array.h  CMakeLists.txt  QuadProg.cpp  QuadProg.h
Source/Unification/: CMakeLists.txt  correspondence.cpp  correspondence.h  main.cpp  unification.cpp  unification.h
Source/Utils/: CMakeLists.txt  colorSpace.cpp  colorSpace.h  util.cpp  util.h
